re PR tree-optimization/43367 (ice: in may_propagate_copy, at tree-ssa-copy.c:85)

2010-03-15  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43367
	* tree-cfg.c (gimple_can_merge_blocks_p): Simplify PHI
	elimination check.

	* gcc.c-torture/compile/pr43367.c: New testcase.

From-SVN: r157458